--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -3,10 +3,10 @@ name: ci
 on:
   push:
     branches:
-      - '*'
+    - master
   pull_request:
     branches:
-      - '*'
+    - master
   workflow_dispatch:
   release:
     types: [published, edited]
